Fixes: off-centre heading (#84)

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -64,7 +64,6 @@ body {
     }
 }
 
-h1,
 h2,
 h3,
 h4,
@@ -77,6 +76,7 @@ h6 {
 }
 
 h1 {
+    font-family: "Spectral";
     font-size: 3.5rem;
     [data-theme="dark"] & {
         color: $dark--rp-foam;
